| Bug #37672 | NDBAPI : NdbRecord option OO_ANYVALUE causes interpreted delete to abort. | ||
|---|---|---|---|
| Submitted: | 26 Jun 2008 16:38 | Modified: | 15 Oct 2008 14:58 |
| Reporter: | Frazer Clement | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: NDB API | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-6.2+ | OS: | Any |
| Assigned to: | Frazer Clement | CPU Architecture: | Any |
[26 Jun 2008 16:38]
Frazer Clement
[4 Jul 2008 12:37]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/49012
[4 Aug 2008 15:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/50876
[5 Aug 2008 10:14]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/50915
[5 Aug 2008 10:53]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/50916
[11 Aug 2008 22:55]
Jon Stephens
Need complete version numbers in which fix will appear in order to document. Thanks.
[15 Oct 2008 10:57]
Frazer Clement
Pushed to 6.2.16, 6.3.17 and 6.4.0
[15 Oct 2008 14:58]
Jon Stephens
Documented bugfix in the ndb-6.2.16 and ndb-6.3.17 changelogs as follows:
Executing an NdbRecord interpreted delete created with an ANYVALUE
option caused the transaction to abort.
[12 Dec 2008 23:29]
Bugs System
Pushed into 6.0.6-alpha (revid:frazer@mysql.com-20080804154901-r9ijzndg9p62b0uy) (version source revid:jonas@mysql.com-20080812185642-1nevjb94zj621dqx) (pib:5)
