Bug# 37672 NDBAPI : NdbRecord option OO_ANYVALUE causes interpreted delete to abort.

NdbRecord variant of NDBAPI did not properly support ANYVALUE with Delete operations
Additionally, DbTUP did not correctly support ANYVALUE with interpreted Delete operations.